--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-<h1>ANGGAPSAJA ARTIKEL</h1>
+<!DOCTYPE html>
+<html lang="id">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Isu Korupsi di Indonesia</title>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            color: #333;
+        }
+
+        header {
+            background: #c62828;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            background: #b71c1c;
+            padding: 10px;
+            text-align: center;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        .container {
+            padding: 20px;
+            max-width: 900px;
+            margin: auto;
+        }
+
+        .card {
+            background: white;
+            padding: 20px;
+            margin-bottom: 20px;
+            border-left: 5px solid #c62828;
+            border-radius: 5px;
+        }
+
+        footer {
+            background: #c62828;
+            color: white;
+            padding: 10px;
+            text-align: center;
+            margin-top: 20px;
+        }
+
+        h2 {
+            color: #b71c1c;
+        }
+
+        .btn {
+            background: #b71c1c;
+            padding: 10px 18px;
+            color: white;
+            border-radius: 5px;
+            display: inline-block;
+            text-decoration: none;
+        }
+
+        .btn:hover {
+            background: #8e0000;
+        }
+    </style>
+</head>
+<body>
+
+<header>
+    <h1>Isu Korupsi di Indonesia</h1>
+    <p>Informasi & Edukasi Anti Korupsi</p>
+</header>
+
+<nav>
+    <a href="#pengertian">Pengertian</a>
+    <a href="#penyebab">Penyebab</a>
+    <a href="#dampak">Dampak</a>
+    <a href="#solusi">Solusi</a>
+</nav>
+
+<div class="container">
+
+    <div class="card" id="pengertian">
+        <h2>Apa Itu Korupsi?</h2>
+        <p>
+            Korupsi adalah penyalahgunaan kekuasaan atau jabatan untuk mendapatkan keuntungan pribadi atau kelompok.
+            Bentuknya bisa berupa suap, penggelapan, manipulasi data, pemerasan, hingga gratifikasi.
+        </p>
+    </div>
+
+    <div class="card" id="penyebab">
+        <h2>Penyebab Utama Korupsi</h2>
+        <ul>
+            <li>Kurangnya integritas dan moral.</li>
+            <li>Lemahnya pengawasan internal dan eksternal.</li>
+            <li>Kultur sosial yang permisif terhadap korupsi.</li>
+            <li>Rendahnya transparansi dan akuntabilitas.</li>
+            <li>Gaji tidak sesuai tanggung jawab (pada beberapa sektor).</li>
+        </ul>
+    </div>
+
+    <div class="card" id="dampak">
+        <h2>Dampak Korupsi</h2>
+        <p>Korupsi menimbulkan dampak besar, di antaranya:</p>
+        <ul>
+            <li>Kerugian keuangan negara.</li>
+            <li>Kualitas layanan publik menurun.</li>
+            <li>Ketimpangan sosial semakin tinggi.</li>
+            <li>Turunnya kepercayaan publik terhadap pemerintah.</li>
+            <li>Lambatnya pembangunan nasional.</li>
+        </ul>
+    </div>
+
+    <div class="card" id="solusi">
+        <h2>Solusi & Upaya Pencegahan</h2>
+        <ul>
+            <li>Pendidikan anti korupsi sejak dini.</li>
+            <li>Penerapan hukum yang tegas dan adil.</li>
+            <li>Transparansi anggaran dan birokrasi.</li>
+            <li>Peran aktif masyarakat dalam pengawasan.</li>
+            <li>Pemanfaatan teknologi untuk mencegah kecurangan.</li>
+        </ul>
+        <a class="btn" href="#">Pelajari Lebih Lanjut</a>
+    </div>
+
+</div>
+
+<footer>
+    © 2025 Edukasi Anti Korupsi. Semua hak dilindungi.
+</footer>
+
+</body>
+</html>
